--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -33,11 +33,22 @@ a, body {
 	color: whitesmoke;
 }
 
+a {
+	box-shadow: inset 0 0 0 0 #7754d6;
+	padding: 0 .25rem;
+	margin: 0 -.25rem;
+	transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+  }
+  a:hover {
+	color: #fff;
+	box-shadow: inset 200px 0 0 0 #7754d6;
+  }
+
 ::selection, a:focus, a:hover {
 	//background-color: #353535;
 	//color: #fff;
 	//color: aqua;
-	font-weight: 700;
+	//font-weight: 700;
 	text-decoration: none;
 }
 
